@startuml

title __JWT's Class Diagram__\n

  namespace com.dh.Wesped {
    namespace Security {
      namespace Jwt {
        class com.dh.Wesped.Security.Jwt.JwtEntryPoint {
            {static} - logger : Logger
            + commence()
        }
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Security {
      namespace Jwt {
        class com.dh.Wesped.Security.Jwt.JwtProvider {
            - expiration : int
            - key : SecretKey
            {static} - logger : Logger
            + generateToken()
            + getEmailFromToken()
            + validateToken()
        }
      }
    }
  }
  

  namespace com.dh.Wesped {
    namespace Security {
      namespace Jwt {
        class com.dh.Wesped.Security.Jwt.JwtTokenFilter {
            {static} - logger : Logger
            # doFilterInternal()
            - getToken()
        }
      }
    }
  }
  

  com.dh.Wesped.Security.Jwt.JwtEntryPoint .up.|> org.springframework.security.web.AuthenticationEntryPoint
  com.dh.Wesped.Security.Jwt.JwtTokenFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.dh.Wesped.Security.Jwt.JwtTokenFilter o-- com.dh.Wesped.Security.AppUserService : appUserService
  com.dh.Wesped.Security.Jwt.JwtTokenFilter o-- com.dh.Wesped.Security.Jwt.JwtProvider : jwtProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
